welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: type mismatch;
 found   : java.awt.Color
 required: String
  print(c:String)
        ^