welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  print(c:String)
	var cond:Boolean = true
  while (cond){
    if (isFacingTrail(c)){
      prendBiscuit()
      baisseBrosse()
      avance()
      
    }
    else{
      gauche()
      if (!isFacingTrail(c)){
        gauche();gauche()
      }
    }
    if(estSurBiscuit()){
      prendBiscuit()
      baisseBrosse()
      leveBrosse()
      cond=false
    }
  }
 }

def isFacingTrail(c:Color):Boolean = {
  var bo:Boolean = !estFaceMur()
  if (bo){
  	avance()
  	bo = (getCouleurSol()==c)
  	recule()
  }
  return bo
  
}